# standup

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  standup_config.yml
standup/: __init__.py  __main__.py  activity_aggregator.py  activity_tracker.py  app.py  cli.py  config_loader.py  constants.py  data_collector.py  event_buffer.py  input_listeners.py  models.py  notifier.py  raw_data_logger.py  session_logger.py  state_handlers.py  state_persistence.py  thread_manager.py  utils.py  window_monitor.py
standup/model/: __init__.py  activity_type.py  app_config.py  app_state.py  state.py
