[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "standup"
version = "0.2.0"
description = "A Python-based activity monitor for Windows that tracks keyboard and mouse input to distinguish between active work sessions and breaks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pywin32>=311",
    "ruff>=0.12.7",
    "windows-toasts>=1.3.1",
]

[project.scripts]
standup = "standup.cli:cli"
